--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Registro de Ventas - Fotocopiadora</title>
+  <title>Fotocopy</title>
   <style>
     :root { --card:#fff; --bg:#f6f7fb; --text:#222; --muted:#6b7280; --border:#e5e7eb; }
     * { box-sizing: border-box; }
@@ -45,8 +45,8 @@
 </head>
 <body>
   <header class="wrap">
-    <h1>📑 Registro de Ventas – Fotocopiadora</h1>
-    <p style="margin:.4rem 0 0;color:#6b7280">Guarde sus pedidos y vea el total acumulado. (Versión local: datos en este navegador)</p>
+    <h1>Fotocopy</h1>
+    <p style="margin:.4rem 0 0;color:#6b7280">Registro De Ventas</p>
   </header>
 
   <div class="wrap">
